--- a/inital/index.html
+++ b/inital/index.html
@@ -5,6 +5,9 @@
 	<title>First React App</title>
 </head>
 <body>
-	
+	<div id="app"></div>
+	<script src="https://unpkg.com/react@15/dist/react.js"></script>
+	<script src="https://unpkg.com/react-dom@15/dist/react.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
