--- a/inital/index.html
+++ b/inital/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>First React App</title>
 </head>
+
 <body>
 	<div id="app"></div>
-	<script src="https://unpkg.com/react@15/dist/react.js"></script>
-	<script src="https://unpkg.com/react-dom@15/dist/react.js"></script>
+	<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 	<script src="app.js"></script>
 </body>
+
 </html>
