--- a/inital/index.html
+++ b/inital/index.html
@@ -10,7 +10,7 @@
 	<div id="app"></div>
 	<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
 	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-	<script src="app.js"></script>
+	<script src="index.js"></script>
 </body>
 
 </html>
