--- a/inital/index.html
+++ b/inital/index.html
@@ -11,6 +11,8 @@
 	<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
 	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 	<script src="index.js"></script>
+	<script src="playground/es6-let-const.js"></script>
+	<script src="playground/es6-arrow-function.js"></script>
 </body>
 
 </html>
