--- a/expensify-app/public/index.html
+++ b/expensify-app/public/index.html
@@ -12,6 +12,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <div id="root2"></div>
     <script src="/bundle.js"></script>
   </body>
 </html>
